--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,36 @@
+altgraph==0.17.4
 arxiv @ file:///home/conda/feedstock_root/build_artifacts/arxiv_1735144958965/work
+Bottleneck @ file:///C:/b/abs_816hr2khp1/croot/bottleneck_1731058648110/work
 Brotli @ file:///C:/b/abs_c415aux9ra/croot/brotli-split_1736182803933/work
 certifi @ file:///C:/b/abs_8a944p1_gn/croot/certifi_1738623753421/work/certifi
 charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
 Cython @ file:///C:/b/abs_ff8225lims/croot/cython_1736261540555/work
 feedparser @ file:///home/conda/feedstock_root/build_artifacts/feedparser_1734808041952/work
 idna @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/idna_1729038997316/work
+mkl-service==2.4.0
+mkl_fft @ file:///C:/Users/dev-admin/mkl/mkl_fft_1730824198951/work
+mkl_random @ file:///C:/Users/dev-admin/mkl/mkl_random_1730824302834/work
+numexpr @ file:///C:/Users/dev-admin/buildout/perseverance-python-buildout/croot/numexpr_1731700337214/work
+numpy @ file:///C:/b/abs_56qrev29w_/croot/numpy_and_numpy_base_1738155838326/work/dist/numpy-2.2.2-cp313-cp313-win_amd64.whl#sha256=d740a4ea626e7bf6bf00c35764dc7aa8b81bd2db69d2c126d9f0969e39f92578
+packaging==24.2
+pandas @ file:///C:/b/abs_e18w9ay4we/croot/pandas_1732735115740/work/dist/pandas-2.2.3-cp313-cp313-win_amd64.whl#sha256=89153934c68f42239148879a6c0fd8bb5004e767550db26257dc4551ad0414d7
+pefile==2023.2.7
 plyer @ file:///home/conda/feedstock_root/build_artifacts/plyer_1735831990936/work
+pyinstaller==6.12.0
+pyinstaller-hooks-contrib==2025.1
 pyjnius @ file:///D:/bld/pyjnius_1732062346295/work
 PySide6==6.8.2
 PySimpleGUI @ file:///home/conda/feedstock_root/build_artifacts/pysimplegui_1684995683167/work
 PySocks @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pysocks_1729039320841/work
+python-dateutil @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/python-dateutil_1729038406576/work
+pytz @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pytz_1729039375330/work
+pywin32-ctypes==0.2.3
 requests @ file:///C:/b/abs_c3508vg8ez/croot/requests_1731000584867/work
-setuptools==75.8.0
+setuptools==72.1.0
 sgmllib3k @ file:///Users/ktietz/demo/mc3/conda-bld/sgmllib3k_1630650258356/work
 shiboken6==6.8.2
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+tzdata @ file:///croot/python-tzdata_1690578112552/work
 urllib3 @ file:///C:/b/abs_7bst06lizn/croot/urllib3_1737133657081/work
 wheel==0.45.1
 win_inet_pton @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/win_inet_pton_1729038644686/work
