--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: PaperScrapper
+name: arXivScraper
 channels:
   - defaults
   - conda-forge
@@ -101,4 +101,3 @@ dependencies:
       - pyinstaller==6.12.0
       - pyinstaller-hooks-contrib==2025.1
       - pywin32-ctypes==0.2.3
-prefix: C:\Users\dprete\AppData\Local\miniconda3\envs\PaperScrapper
